--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "gh-pages": "^6.1.1",
+    "pinia": "^2.2.6",
     "vue": "^3.4.21",
     "vue-router": "^4.4.5"
   },
