--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.1.0",
     "@nuxt/image": "^1.8.1",
-    "@nuxtjs/tailwindcss": "^6.12.2",
-    "@vesp/nuxt-fontawesome": "^1.1.0"
+    "@nuxtjs/tailwindcss": "^6.12.2"
   }
 }
