--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.7.0",
+    "@vueuse/nuxt": "^12.0.0",
     "gh-pages": "^6.2.0",
     "nuxt": "^3.14.1592",
     "vue": "latest",
